Das erste Gricht wurde hinzugefügt lasst euch überraschen, wass es ist.

--- a/Kochbuch.tex
+++ b/Kochbuch.tex
@@ -5,6 +5,7 @@
 \usepackage{amsfonts}
 \usepackage{amssymb}
 \usepackage{graphicx}
+\usepackage[pdfborder={0 0 0}]{hyperref}
 \author{David Nelles}
 \title{Kochbuch}
 \date{Stand: \\ \today}
@@ -16,5 +17,21 @@
 	
 	Ich wünsche Ihnen viel Spaß mit den Gerichten und möchte Sie dazu ermutigen, selber mit den Zutaten, den angegebenen Zeitangaben und anderen scheinbar vorgeschriebenen Werten zu experimentieren.
 	
-	Wenn Sie eine Verbesserung eines Gerichts herausfinden, helfen Sie doch beim verbessern dieser Speise. Dazu müssen sie bloß mit LaTeX und GitHub umgehen können. In GitHub finden Sie dieses Dokument unter der Adresse
+	Wenn Sie eine Verbesserung eines Gerichts herausfinden, helfen Sie doch beim verbessern dieser Speise. Über GitHub können Sie Kontakt mit mir aufnehmen.
+	
+	Link: \href{https://github.com/NelDav/Kochbuch}{https://github.com/NelDav/Kochbuch}
+	\newpage
+	\section{Käsepfannkuchen}
+	Pfannkuchen mit Gemüse und Käse. Dauer ca. 15 Minuten. Das folgende Rezept ist für ungefähr 4 Pfannkuchen ausgelegt.
+	\subsection{Zutaten}
+	\begin{itemize}
+		\item 12 Eier
+		\item $1/2$ Liter Milch
+		\item Gemüse nach Wahl
+		\item So viele Käsescheiben wie Pfannkuchen
+		\item Öl, Margarine oder Butter
+		\item Salz
+	\end{itemize}
+	\subsection{Zubereitung}
+	Zuerst die Milch und die Eier in einen Behälter füllen und vermengen, bis sie eine homogene Flüssigkeit bilden. Danach das Gemüse in kleine Stücke schneiden. Das Öl, die Margarine oder die Butter in einer Pfanne auslassen. Nun einen Teil der Eier-Milch Flüssigkeit in die Pfanne geben. Direkt das Gemüse in der Pfanne verteilen und eine Käsescheibe auf den Pfannkuchen legen. Die Pfanne immer Wieder schwenken, damit der Pfannkuchen nicht anbrennt. Noch während der Pfandkuchenteig flüssig ist Salzen. Nachdem Auf der Oberseite des Pfannkuchens nur noch eine dünne Schicht flüssiger Teig ist, den Pfannkuchen wenden. Von dieser Seite noch ungefähr eine Minute lang braten lassen und auf einem Teller servieren.
 \end{document}
